--- a/slide/slide.html
+++ b/slide/slide.html
@@ -154,53 +154,10 @@
 <section id="section" class="title-slide slide level2 center">
 <h2></h2>
 <div style="text-align: center;">
-<p><span class="custom-subtitle33 center">🚴‍♂️ <strong>Vous êtes-vous déjà demandé…</strong></span> <br></p>
+<p><span class="custom-subtitle33 center">🚴‍♂️ <strong>Avez-vous déjà été deçus de la qualité de service de la TAM ?</strong></span> <br></p>
 </div>
-<div class="fragment">
-<blockquote>
-<em>… comment arriver à l’université à temps pour votre examen important lorsque vous êtes coincé dans un trafic de vélos à l’heure de pointe ?</em>
 <div style="text-align: center;">
-<p><img data-src="images/bikers-tj.jpg" style="width:80.0%"></p>
-</div>
-</blockquote>
-</div>
-<!---------------------------------------------------------------------------->
-<!---------------------------------------------------------------------------->
-</section>
-
-<section id="notre-mission" class="title-slide slide level2 center">
-<h2>Notre Mission</h2>
-<hr>
-<div>
-<ul>
-<li class="fragment"><strong>Nous analysons :</strong>
-<ul>
-<li class="fragment">Les flux de vélos en temps réel dans la ville de Montpellier.<br>
-</li>
-<li class="fragment">Les mouvements de cyclistes pour prévoir les situations de congestion.<br>
-</li>
-<li class="fragment">Des solutions pratiques pour optimiser vos trajets dans les embouteillages.<br>
-</li>
-</ul></li>
-<li class="fragment"><strong>Objectifs :</strong>
-<ul>
-<li class="fragment">Visualiser et analyser les flux cyclistes.<br>
-</li>
-<li class="fragment">Prévoir les mouvements de trafic avec une carte interactive.<br>
-</li>
-<li class="fragment">Proposer des solutions pour optimiser les infrastructures urbaines.</li>
-</ul></li>
-</ul>
-</div>
-<div class="fragment">
-<p>L’ambition du projet est de développer des <strong>visualisations interactives</strong>, notamment une <strong>carte prédictive des flux cyclistes</strong>, accessibles via un site web dédié.</p>
-</div>
-<div class="fragment">
-<ul>
-<li>Identifier les tendances de mobilité pour mieux comprendre les habitudes des usagers.<br>
-</li>
-<li>Proposer des solutions pratiques afin d’optimiser les infrastructures urbaines et de promouvoir l’usage du vélo comme moyen de transport durable.</li>
-</ul>
+<p><img data-src="images/bikers-tj.jpg" style="width:70.0%"></p>
 </div>
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
@@ -217,16 +174,18 @@
 <hr>
 <div class="fragment">
 <div style="text-align: left;">
-<p>Le projet <strong>CycleVision3</strong> a pour objectif d’analyser et de prédire les flux cyclistes dans la ville de Montpellier à l’aide de données issues de trois sources principales :</p>
+<ul>
+<li><strong>Objectifs :</strong></li>
+</ul>
 </div>
 </div>
 <div>
 <ul>
-<li class="fragment"><strong>VéloMagg</strong> : Historique des trajets en vélos en libre-service.<br>
+<li class="fragment">Visualiser et analyser les flux cyclistes.<br>
 </li>
-<li class="fragment"><strong>Capteurs cyclistes/piétons</strong> : Données collectées aux points clés de la ville.<br>
+<li class="fragment">Prévoir les mouvements de trafic avec une carte interactive.<br>
 </li>
-<li class="fragment"><strong>OpenStreetMap (OSM)</strong> : Données géographiques pour la cartographie.</li>
+<li class="fragment">Proposer des solutions pour optimiser les infrastructures urbaines.</li>
 </ul>
 </div>
 <div class="fragment">
@@ -241,6 +200,9 @@
 <section id="contribution-de-léquipe" class="title-slide slide level2 center">
 <h2>Contribution de l’équipe</h2>
 <hr>
+<div style="text-align: center;">
+<p><br></p>
+</div>
 <div class="columns">
 <div class="column" style="width:9%;">
 <div style="text-align: center;">
@@ -287,41 +249,6 @@
 </ul>
 </div></div>
 </div>
-<div class="fragment">
-<div class="message1">
-<p><br> <br> <em>Note importante : Bien que les tâches principales soient spécifiées pour chaque membre, tous les participants ont collaboré de manière active et apporté leur soutien mutuel dans la résolution des défis rencontrés tout au long du projet.</em></p>
-</div>
-</div>
-<!---------------------------------------------------------------------------->
-<!---------------------------------------------------------------------------->
-</section>
-
-<section id="structure-du-projet" class="title-slide slide level2 center">
-<h2>Structure du projet</h2>
-<hr>
-<div class="message1" style="text-align: center;">
-<pre>PROJ_HAX712X/                                   # Répertoire principal du projet
-├── .github/workflows/                          # Configuration pour l'intégration continue
-├── cache/                                      # Fichiers temporaires
-├── Cycle3                                      #
-│   ├── analyse_donnee/                         # Scripts pour l'analyse des données
-│   ├── docs/                                   #
-│   ├── images/                                 # Images utilisées dans le projet
-│   ├── map/                                    # Scripts pour les cartes interactives
-│   ├── video/                                  # 
-│   ├── visualisation/                          # Résultats des visualisations
-│   ├── data/                                   # Données des 3 jeux de données
-├── docs/                                       # Répertoire des fichiers du site web
-├── roadmap/                                    # Fichier README.md avec la description .......
-├── slide/                                      # 
-├── src/                                        # Répertoire contenant le code source
-├── .DS_Store                                   # 
-├── .Rhistory                                   # Fichier d'historique R
-├── .gitignore                                  # Fichier Git ignore
-├── README.md                                   # Documentation principale du projet
-└── requirements.txt                            # Dépendances du projet
-</pre>
-</div>
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
 </section>
@@ -340,21 +267,13 @@
 <p><span class="custom-subtitle3"><strong>Nombre total de trajets des différentes années depuis 2020</strong></span></p>
 </div>
 <div class="columns" style="display: flex; justify-content: center;">
-<div class="column" style="width:25%;">
+<div class="column" style="width:65%;">
 <div style="text-align: center;">
-<p><img src="images/analys_datasets/cell-2-output-6.png" width="100%" align="middle"></p>
+<p><img src="images/analys_datasets/cell-2-output-2.png" width="60%" align="middle"></p>
 </div>
-</div><div class="column" style="width:25%;">
+</div><div class="column" style="width:35%;">
 <div style="text-align: center;">
-<p><img src="images/analys_datasets/cell-2-output-10.png" width="100%" align="middle"></p>
-</div>
-</div><div class="column" style="width:25%;">
-<div style="text-align: center;">
-<p><img src="images/analys_datasets/cell-2-output-14.png" width="100%" align="middle"></p>
-</div>
-</div><div class="column" style="width:25%;">
-<div style="text-align: center;">
-<p><img src="images/analys_datasets/cell-2-output-2.png" width="100%" align="middle"></p>
+<p><img src="images/ana_trage.png" width="60%" align="middle"></p>
 </div>
 </div></div>
 </div>
@@ -363,13 +282,13 @@
 <p><span class="custom-subtitle3"><strong>Distance moyenne parcourue et stations les plus populaires</strong></span></p>
 </div>
 <div class="columns" style="display: flex; justify-content: center;">
-<div class="column" style="width:45%;">
+<div class="column" style="width:55%;">
 <div style="text-align: center;">
 <p><img src="images/analys_datasets/StationStat.png" width="60%" align="middle"></p>
 </div>
 </div><div class="column" style="width:45%;">
 <div style="text-align: center;">
-<p><img src="images/analys_datasets/Distance_par_mois_2021_2024.png" width="160%" align="middle"></p>
+<p><img src="images/analys_datasets/Distance_par_mois_2021_2024.png" width="100%" align="middle"></p>
 </div>
 </div></div>
 </div>
@@ -384,7 +303,7 @@
 <p><span class="custom-subtitle3"><strong>Stations de vélos à Montpellier</strong></span></p>
 </div>
 <div style="text-align: center;">
-<div id="d08dbead" class="cell" data-execution_count="1">
+<div id="e8bf22c8" class="cell" data-execution_count="1">
 <div class="cell-output cell-output-display">
 
         <iframe width="100%" height="450px" src="map.html" frameborder="0" allowfullscreen=""></iframe>
