--- a/slide/slide.html
+++ b/slide/slide.html
@@ -253,7 +253,6 @@
 </div>
 <div style="text-align: center;">
 <p><br></p>
-<p><br> <br></p>
 <p><br></p>
 </div>
 <!---------------------------------------------------------------------------->
@@ -269,35 +268,58 @@
 <section id="analyse-des-datasets" class="title-slide slide level2 center">
 <h2>Analyse des datasets</h2>
 <hr>
-<div class="fragment">
 <div style="text-align: center;">
-<p><span class="custom-subtitle3"><strong>Analyse des trajets en 2022</strong></span></p>
+<p><span class="custom-subtitle3"><strong>Analyse des trajets</strong></span> <br> <br></p>
 </div>
-<div class="columns" style="display: flex; justify-content: center;">
-<div class="column" style="width:65%;">
-<div style="text-align: center;">
-<p><img src="images/analys_datasets/cell-2-output-2.png" width="63%" align="middle"></p>
-</div>
-</div><div class="column" style="width:35%;">
-<div style="text-align: center;">
-<p><img src="images/ana_trage.png" width="60%" align="middle"></p>
-</div>
-</div></div>
-</div>
-<div class="fragment">
-<div style="text-align: center;">
-<p><span class="custom-subtitle3"><strong>Distance moyenne parcourue et stations les plus populaires</strong></span></p>
-</div>
-<div class="columns" style="display: flex; justify-content: center;">
+<div class="columns">
 <div class="column" style="width:50%;">
 <div style="text-align: center;">
-<p><img src="images/analys_datasets/StationStat.png" width="60%" align="middle"></p>
+<p><br></p>
+<p><br> <img src="images/analys_datasets/cell-2-output-2.png" width="90%" align="middle"></p>
 </div>
-</div><div class="column" style="width:50%;">
+</div><div class="column" style="width:38%;">
 <div style="text-align: center;">
-<p><img src="images/analys_datasets/Distance_par_mois_2021_2024.png" width="85%" align="middle"></p>
+<p><img src="images/ana_trage.png" width="100%" align="middle"></p>
+</div>
+</div><div class="column" style="width:12%;">
+<div style="text-align: center;">
+<p><img src="images/jours.png" width="100%" align="middle"></p>
 </div>
 </div></div>
+<div style="text-align: center;">
+<p><br></p>
+<p><br> <br></p>
+<p><br></p>
+</div>
+<!---------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------->
+</section>
+
+<section id="analyse-des-datasets-1" class="title-slide slide level2 center">
+<h2>Analyse des datasets</h2>
+<hr>
+<div style="text-align: center;">
+<p><span class="custom-subtitle3"><strong>Distance moyenne parcourue</strong></span> <br> <br> <img src="images/analys_datasets/StationStat.png" width="60%" align="middle"></p>
+</div>
+<div style="text-align: center;">
+<p><br></p>
+<p><br> <br></p>
+<p><br></p>
+</div>
+<!---------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------->
+</section>
+
+<section id="analyse-des-datasets-2" class="title-slide slide level2 center">
+<h2>Analyse des datasets</h2>
+<hr>
+<div style="text-align: center;">
+<p><span class="custom-subtitle3"><strong>Stations les plus populaires</strong></span> <br> <br> <img src="images/analys_datasets/Distance_par_mois_2021_2024.png" width="100%" align="middle"></p>
+</div>
+<div style="text-align: center;">
+<p><br></p>
+<p><br> <br></p>
+<p><br></p>
 </div>
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
@@ -310,7 +332,7 @@
 <p><span class="custom-subtitle3"><strong>Stations de vélos à Montpellier</strong></span></p>
 </div>
 <div style="text-align: center;">
-<div id="d10cc0ca" class="cell" data-execution_count="1">
+<div id="3c5e9c51" class="cell" data-execution_count="1">
 <div class="cell-output cell-output-display">
 
         <iframe width="100%" height="450px" src="map.html" frameborder="0" allowfullscreen=""></iframe>
@@ -370,11 +392,34 @@
 <p><span class="custom-subtitle3"><strong>Carte des trajets</strong></span></p>
 </div>
 <div class="columns" style="display: flex; justify-content: center;">
-<div class="column" style="width:50%;">
+<div class="column" style="width:45%;">
+<div style="text-align: center;">
+<p><br> <br> <br> <img src="images/expl_charl.png" width="70%" align="middle"></p>
+</div>
+</div><div class="column" style="width:55%;">
 <div style="text-align: center;">
 <p><img src="images/charl_1_2.png" width="73%" align="middle"></p>
 </div>
-</div><div class="column" style="width:50%;">
+</div></div>
+<div style="text-align: center;">
+<p><br> <br></p>
+</div>
+<!---------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------->
+</section>
+
+<section id="simulations-et-prédictions-2" class="title-slide slide level2 center">
+<h2>Simulations et prédictions</h2>
+<hr>
+<div style="text-align: center;">
+<p><span class="custom-subtitle3"><strong>Carte des trajets</strong></span></p>
+</div>
+<div class="columns" style="display: flex; justify-content: center;">
+<div class="column" style="width:45%;">
+<div style="text-align: center;">
+<p><br> <br> <br> <img src="images/expl_charl.png" width="70%" align="middle"></p>
+</div>
+</div><div class="column" style="width:55%;">
 <div style="text-align: center;">
 <p><img src="images/charl_1_3.png" width="73%" align="middle"></p>
 </div>
@@ -445,6 +490,7 @@
 </div>
 <div style="text-align: center;">
 <p><br></p>
+<p><br> <br></p>
 <p><br></p>
 </div>
 <!---------------------------------------------------------------------------->
@@ -460,11 +506,11 @@
 <div class="columns" style="display: flex; justify-content: center;">
 <div class="column" style="width:50%;">
 <div style="text-align: center;">
-<p><img src="images/perf_analys/3.png" width="100%" align="middle"></p>
+<p><img src="images/perf_analys/3.png" width="110%" align="middle"></p>
 </div>
 </div><div class="column" style="width:50%;">
 <div style="text-align: center;">
-<p><img src="images/perf_analys/4.png" width="100%" align="middle"></p>
+<p><img src="images/perf_analys/4.png" width="110%" align="middle"></p>
 </div>
 </div></div>
 <div style="text-align: center;">
@@ -475,6 +521,7 @@
 </div>
 <div style="text-align: center;">
 <p><br></p>
+<p><br> <br></p>
 <p><br></p>
 </div>
 <!---------------------------------------------------------------------------->
@@ -591,30 +638,30 @@
 <ol type="1">
 <li class="fragment"><strong>Gestion des données :</strong>
 <ul>
-<li class="fragment">Problèmes avec les formats des données (JSON non formatés, CSV ou DataFrame).<br>
+<li class="fragment">Problèmes avec les formats des données.<br>
 </li>
-<li class="fragment">Importation et lecture des fichiers CSV, particulièrement complexes au début.<br>
+<li class="fragment">Importation et lecture des fichiers CSV.<br>
 </li>
-<li class="fragment">Données manquantes nécessitant un traitement supplémentaire.<br>
+<li class="fragment">Données manquantes.<br>
 </li>
 </ul></li>
 <li class="fragment"><strong>Création de cartes interactives et prévisions de trafic :</strong>
 <ul>
-<li class="fragment">Temps de création élevé pour développer des cartes interactives.<br>
+<li class="fragment">Temps de création.<br>
 </li>
 </ul></li>
 <li class="fragment"><strong>Déploiement du site web :</strong>
 <ul>
-<li class="fragment">Difficultés initiales lors du déploiement (GitHub Pages).<br>
+<li class="fragment">Déploiement (GitHub Pages).<br>
 </li>
-<li class="fragment">Intégration des cartes interactives, notamment celles utilisant <strong>Shiny</strong>.<br>
+<li class="fragment">Intégration des cartes interactives avec <strong>Shiny</strong>.<br>
 </li>
-<li class="fragment">Configuration des fonctionnalités interactives liées aux vidéos.<br>
+<li class="fragment">Configuration galerie vidéo.<br>
 </li>
 </ul></li>
 <li class="fragment"><strong>Documentation du projet :</strong>
 <ul>
-<li class="fragment">Complexité liée au formatage clair et lisible d’un grand nombre de fonctions.<br>
+<li class="fragment">Complexité de project.<br>
 </li>
 <li class="fragment">Configuration documentation avec <strong>Sphinx</strong>.<br>
 </li>
