--- a/slide/slide.html
+++ b/slide/slide.html
@@ -332,7 +332,7 @@
 <p><span class="custom-subtitle3"><strong>Stations de vélos à Montpellier</strong></span></p>
 </div>
 <div style="text-align: center;">
-<div id="3c5e9c51" class="cell" data-execution_count="1">
+<div id="32b87bd3" class="cell" data-execution_count="1">
 <div class="cell-output cell-output-display">
 
         <iframe width="100%" height="450px" src="map.html" frameborder="0" allowfullscreen=""></iframe>
@@ -634,36 +634,47 @@
 <section id="problèmes-rencontrés" class="title-slide slide level2 center">
 <h2>Problèmes rencontrés</h2>
 <hr>
-<div>
+<div class="fragment">
 <ol type="1">
-<li class="fragment"><strong>Gestion des données :</strong>
+<li><strong>Gestion des données :</strong>
 <ul>
-<li class="fragment">Problèmes avec les formats des données.<br>
+<li>Problèmes avec les formats des données.<br>
 </li>
-<li class="fragment">Importation et lecture des fichiers CSV.<br>
+<li>Importation et lecture des fichiers CSV.<br>
 </li>
-<li class="fragment">Données manquantes.<br>
+<li>Données manquantes.<br>
 </li>
 </ul></li>
-<li class="fragment"><strong>Création de cartes interactives et prévisions de trafic :</strong>
+</ol>
+</div>
+<div class="fragment">
+<ol start="2" type="1">
+<li><strong>Création de cartes interactives et prévisions de trafic :</strong>
 <ul>
-<li class="fragment">Temps de création.<br>
+<li>Temps de création.</li>
+</ul></li>
+</ol>
+</div>
+<div class="fragment">
+<ol start="3" type="1">
+<li><strong>Déploiement du site web :</strong>
+<ul>
+<li>Déploiement (GitHub Pages).<br>
+</li>
+<li>Intégration des cartes interactives avec <strong>Shiny</strong>.<br>
+</li>
+<li>Configuration galerie vidéo.<br>
 </li>
 </ul></li>
-<li class="fragment"><strong>Déploiement du site web :</strong>
+</ol>
+</div>
+<div class="fragment">
+<ol start="4" type="1">
+<li><strong>Documentation du projet :</strong>
 <ul>
-<li class="fragment">Déploiement (GitHub Pages).<br>
+<li>Complexité de project.<br>
 </li>
-<li class="fragment">Intégration des cartes interactives avec <strong>Shiny</strong>.<br>
-</li>
-<li class="fragment">Configuration galerie vidéo.<br>
-</li>
-</ul></li>
-<li class="fragment"><strong>Documentation du projet :</strong>
-<ul>
-<li class="fragment">Complexité de project.<br>
-</li>
-<li class="fragment">Configuration documentation avec <strong>Sphinx</strong>.<br>
+<li>Configuration documentation avec <strong>Sphinx</strong>.<br>
 </li>
 </ul></li>
 </ol>
