--- a/slide/slide.html
+++ b/slide/slide.html
@@ -163,6 +163,36 @@
 <!---------------------------------------------------------------------------->
 </section>
 
+<section id="structure-de-la-présentation" class="title-slide slide level2 center">
+<h2>Structure de la présentation</h2>
+<hr>
+<div style="text-align: center;">
+<p><br></p>
+</div>
+<ul>
+<li><strong>Introduction et organisation.</strong><br>
+</li>
+<li><strong>Résultats obtenus.</strong><br>
+</li>
+<li><strong>Analyse du script.</strong></li>
+<li><strong>Synthèse.</strong></li>
+</ul>
+<div style="text-align: center;">
+<p><br></p>
+<p><br></p>
+<p><br></p>
+<p><br></p>
+<p><br></p>
+<p><br></p>
+<p><br></p>
+<p><br></p>
+<p><br></p>
+<p><br></p>
+</div>
+<!---------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------->
+</section>
+
 <section>
 <section id="introduction-et-organisation" class="title-slide slide level1 section-background center">
 <h1>Introduction et organisation</h1>
@@ -265,8 +295,8 @@
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------->
 </section>
-<section id="analyse-des-datasets" class="title-slide slide level2 center">
-<h2>Analyse des datasets</h2>
+<section id="analyse-des-données" class="title-slide slide level2 center">
+<h2>Analyse des données</h2>
 <hr>
 <div style="text-align: center;">
 <p><span class="custom-subtitle3"><strong>Analyse des trajets</strong></span> <br> <br></p>
@@ -295,8 +325,8 @@
 <!---------------------------------------------------------------------------->
 </section>
 
-<section id="analyse-des-datasets-1" class="title-slide slide level2 center">
-<h2>Analyse des datasets</h2>
+<section id="analyse-des-données-1" class="title-slide slide level2 center">
+<h2>Analyse des données</h2>
 <hr>
 <div style="text-align: center;">
 <p><span class="custom-subtitle3"><strong>Distance moyenne parcourue</strong></span> <br> <br> <img src="images/analys_datasets/StationStat.png" width="60%" align="middle"></p>
@@ -310,8 +340,8 @@
 <!---------------------------------------------------------------------------->
 </section>
 
-<section id="analyse-des-datasets-2" class="title-slide slide level2 center">
-<h2>Analyse des datasets</h2>
+<section id="analyse-des-données-2" class="title-slide slide level2 center">
+<h2>Analyse des données</h2>
 <hr>
 <div style="text-align: center;">
 <p><span class="custom-subtitle3"><strong>Stations les plus populaires</strong></span> <br> <br> <img src="images/analys_datasets/Distance_par_mois_2021_2024.png" width="100%" align="middle"></p>
@@ -332,7 +362,7 @@
 <p><span class="custom-subtitle3"><strong>Stations de vélos à Montpellier</strong></span></p>
 </div>
 <div style="text-align: center;">
-<div id="32b87bd3" class="cell" data-execution_count="1">
+<div id="93983c7d" class="cell" data-execution_count="1">
 <div class="cell-output cell-output-display">
 
         <iframe width="100%" height="450px" src="map.html" frameborder="0" allowfullscreen=""></iframe>
@@ -421,7 +451,7 @@
 </div>
 </div><div class="column" style="width:55%;">
 <div style="text-align: center;">
-<p><img src="images/charl_1_3.png" width="73%" align="middle"></p>
+<p><img src="images/charl_1_3.png" width="74%" align="middle"></p>
 </div>
 </div></div>
 <div style="text-align: center;">
@@ -724,10 +754,10 @@
 <li><p><strong>Expérience en travail d’équipe.</strong></p></li>
 <li><p><strong>Compétences développées :</strong></p>
 <ul>
-<li>Analyse des données avec Python.<br>
+<li>Analyse des données avec <em>Python</em>.<br>
 </li>
-<li>Visualisation des données avec <strong>Folium</strong>.</li>
-<li>Configuration et automatisation CI/CD avec <strong>GitHub Actions</strong>.</li>
+<li>Visualisation des données avec <em>Folium</em>.</li>
+<li>Creation de site avec <em>Quarto</em> et <em>Shiny</em>.</li>
 </ul></li>
 <li><p><strong>Validation et tests.</strong></p></li>
 </ol>
