--- a/slide/slide.html
+++ b/slide/slide.html
@@ -206,14 +206,12 @@
 <div style="text-align: left;">
 <p><strong>Objectifs :</strong></p>
 </div>
-</div>
-<div>
 <ul>
-<li class="fragment">Visualiser et analyser les flux cyclistes.<br>
+<li>Visualiser et analyser les flux cyclistes.<br>
 </li>
-<li class="fragment">Prévoir les mouvements de trafic avec une carte interactive.<br>
+<li>Prévoir les mouvements de trafic avec une carte interactive.<br>
 </li>
-<li class="fragment">Proposer des solutions pour optimiser les infrastructures urbaines.</li>
+<li>Proposer des solutions pour optimiser les infrastructures urbaines.</li>
 </ul>
 </div>
 <div class="fragment">
@@ -362,7 +360,7 @@
 <p><span class="custom-subtitle3"><strong>Stations de vélos à Montpellier</strong></span></p>
 </div>
 <div style="text-align: center;">
-<div id="598580a2" class="cell" data-execution_count="1">
+<div id="8533bf5c" class="cell" data-execution_count="1">
 <div class="cell-output cell-output-display">
 
         <iframe width="100%" height="450px" src="map.html" frameborder="0" allowfullscreen=""></iframe>
@@ -687,6 +685,17 @@
 </div>
 <div class="fragment">
 <ol start="3" type="1">
+<li><strong>Documentation du projet :</strong>
+<ul>
+<li>Complexité de project.<br>
+</li>
+<li>Configuration documentation avec <strong>Sphinx</strong>.<br>
+</li>
+</ul></li>
+</ol>
+</div>
+<div class="fragment">
+<ol start="4" type="1">
 <li><strong>Déploiement du site web :</strong>
 <ul>
 <li>Déploiement (GitHub Pages).<br>
@@ -694,17 +703,6 @@
 <li>Intégration des cartes interactives avec <strong>Shiny</strong>.<br>
 </li>
 <li>Configuration galerie vidéo.<br>
-</li>
-</ul></li>
-</ol>
-</div>
-<div class="fragment">
-<ol start="4" type="1">
-<li><strong>Documentation du projet :</strong>
-<ul>
-<li>Complexité de project.<br>
-</li>
-<li>Configuration documentation avec <strong>Sphinx</strong>.<br>
 </li>
 </ul></li>
 </ol>
