--- a/slide/slide.html
+++ b/slide/slide.html
@@ -360,7 +360,7 @@
 <p><span class="custom-subtitle3"><strong>Stations de vélos à Montpellier</strong></span></p>
 </div>
 <div style="text-align: center;">
-<div id="8533bf5c" class="cell" data-execution_count="1">
+<div id="914bc90e" class="cell" data-execution_count="1">
 <div class="cell-output cell-output-display">
 
         <iframe width="100%" height="450px" src="map.html" frameborder="0" allowfullscreen=""></iframe>
@@ -498,7 +498,7 @@
 <h2>Analyse des performances et d’utilisation de la mémoire</h2>
 <hr>
 <div style="text-align: center;">
-<p><span class="custom-subtitle3"><strong>Pour map_trajet_BD.py</strong></span></p>
+<p><br> <span class="custom-subtitle3"><strong>Pour map_trajet_BD.py</strong></span></p>
 </div>
 <div class="columns" style="display: flex; justify-content: center;">
 <div class="column" style="width:50%;">
@@ -513,9 +513,7 @@
 <div style="text-align: center;">
 <p><br></p>
 </div>
-<div class="fragment">
 <p>Les graphiques montrent les performances pour différentes quantités de trajets.</p>
-</div>
 <div style="text-align: center;">
 <p><br></p>
 <p><br> <br></p>
@@ -529,7 +527,7 @@
 <h2>Analyse des performances et d’utilisation de la mémoire</h2>
 <hr>
 <div style="text-align: center;">
-<p><span class="custom-subtitle3"><strong>Pour vidéo.py</strong></span></p>
+<p><br> <span class="custom-subtitle3"><strong>Pour vidéo.py</strong></span></p>
 </div>
 <div class="columns" style="display: flex; justify-content: center;">
 <div class="column" style="width:50%;">
@@ -544,9 +542,7 @@
 <div style="text-align: center;">
 <p><br></p>
 </div>
-<div class="fragment">
 <p>Pour améliorer l’efficacité temporelle, des outils comme <strong>ThreadPoolExecutor</strong> et le <strong>cache</strong> ont été utilisés. L’importation directe des bases de données a également été privilégiée aux requêtes HTTP avec <code>requests</code> pour accélérer l’exécution.</p>
-</div>
 <div style="text-align: center;">
 <p><br></p>
 <p><br> <br></p>
